--- a/budget-calculator/src/App.css
+++ b/budget-calculator/src/App.css
@@ -39,7 +39,7 @@ main {
   margin: 5% auto;
   padding: 2%;
   background-color: #5bb6b6;
-  width: 50%;
+  width: 80%;
   border-end-start-radius: 50px;
   border-start-end-radius: 50px;
 }
@@ -110,7 +110,7 @@ input::placeholder {
 }
 
 .expense {
-  margin-right: 2rem;
+  margin-right: 1rem;
   text-transform: capitalize;
 }
 
@@ -118,7 +118,7 @@ input::placeholder {
   font-weight: 300;
   font-size: 1.2rem;
   border-radius: 2px;
-  padding: 1px 3px;
+  /* padding: 1px 3px; */
 }
 
 button {
@@ -213,5 +213,92 @@ footer span {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    width: 90%;
+    font-size: 0.7rem;
+    padding-bottom: 1.5rem;
+    border-end-start-radius: 20px;
+    border-start-end-radius: 20px;
+  }
+
+  .form {
+    flex-direction: column;
+  }
+
+  .form-group {
+    padding: 0.75rem 0;
+    flex: 0 0 100%;
+  }
+
+  .form-control {
+    height: 1.5rem;
+    width: 100%;
+    font-size: 0.8rem;
+    margin: 0 0 8px 0;
+    padding: 0;
+  }
+
+  label {
+    font-size: 1rem;
+  }
+
+  .list {
+    margin: 0 0.5rem;
+  }
+
+  .item {
+    margin-bottom: 0.5rem;
+    padding: 5px;
+  }
+
+  span.expense {
+    margin-right: 3px;
+  }
+
+  .expense,
+  .info,
+  .amount,
+  .edit-btn,
+  .clear-btn {
+    font-size: smaller;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  .edit-btn,
+  .clear-btn {
+    margin: 0;
+    width: 1.5rem;
+  }
+
+  .info {
+    text-align: left;
+  }
+
+
+  button {
+    font-size: 0.8rem;
+    margin: 0.5rem;
+  }
+
+  .btn-icon {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  footer {
+    line-height: 1.5rem;
+    font-size: smaller;
+  }
+
+  header h1 {
+    font-size: 1.2rem;
   }
 }
